--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -12,8 +12,11 @@
     "title": "销毁Token"
   },
   "buy-dialog": {
-    "submit": "购买",
-    "title": "立即购买"
+    "buy-now": "立即购买",
+    "submit": "继续支付",
+    "buy": "购买",
+    "title": "确认",
+    "total": "总金额"
   },
   "change-wallet": {
     "description": "变更为以太链，币安链或者火币链",
@@ -56,6 +59,7 @@
     "load-more": "加载更多",
     "nothing-found": "暂无数据",
     "quantity": "数量",
+    "price": "价格",
     "read-more": "了解更多",
     "reset": "重置",
     "restore": "恢复",
