--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -121,16 +121,6 @@
     "subCollection": "При создании первого НМТ необходимо создать коллекцию. При следующем создании вы можете поместить НМТ в уже созданную коллекцию."
   },
   "create-nft": {
-    "channelOption": {
-      "Comicbooks": "Комикс",
-      "Comics": "Комикс",
-      "FineArts": "Изобразительное искусство",
-      "Sports": "Спорт",
-      "Collectible": "Коллекционирование",
-      "Music": "Музыка",
-      "Performer": "Исполнитель",
-      "Metaverse": "Метаверс"
-    },
     "label": {
       "Set-up-date": "Установить дату и время",
       "channel": "Канал",
@@ -325,7 +315,7 @@
     "collectible": "Коллекционирование",
     "music": "Музыка",
     "performer": "Исполнитель",
-    "metaverse": "Метаверс"
+    "games": "Игры"
   },
   "product-card": {
     "burn": "Сжечь токены",
