--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -12,8 +12,11 @@
     "title": "销毁Token"
   },
   "buy-dialog": {
-    "submit": "购买",
-    "title": "立即购买"
+    "buy-now": "立即购买",
+    "submit": "继续支付",
+    "buy": "购买",
+    "title": "确认",
+    "total": "总金额"
   },
   "change-wallet": {
     "description": "变更为以太链，币安链或者火币链",
@@ -56,6 +59,7 @@
     "load-more": "加载更多",
     "nothing-found": "暂无数据",
     "quantity": "数量",
+    "price": "价格",
     "read-more": "了解更多",
     "reset": "重置",
     "restore": "恢复",
@@ -117,16 +121,6 @@
     "subCollection": "创建NFT时，需要先创建一个作品集。之后可在该作品集中创建对应标准的NFT。"
   },
   "create-nft": {
-    "channelOption": {
-      "Comicbooks": "漫画",
-      "Comics": "漫画",
-      "FineArts": "艺术",
-      "Sports": "体育",
-      "Collectible": "收藏品",
-      "Music": "音乐",
-      "Performer": "表演者",
-      "Metaverse": "玄幻世界"
-    },
     "label": {
       "Set-up-date": "定时出售",
       "channel": "类型",
@@ -326,7 +320,8 @@
     "collectible": "收藏品",
     "music": "音乐",
     "performer": "表演者",
-    "metaverse": "玄幻世界"
+    "metaverse": "虚拟现实",
+    "games": "游戏"
   },
   "product-card": {
     "not-on-sale": "未出售",
