--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -539,7 +539,8 @@
     "max-size": "Максимальный размер: {value, number} МБ",
     "min": "Наименьшее значение: {value}",
     "require-integer": "Значение должно быть целым числом.",
-    "required": "Это поле обязательно для заполнения"
+    "required": "Это поле обязательно для заполнения",
+    "invalid-name": "ограничение по количеству слов: 32 символа. Просьба не содержать：` “ ’ ' ” "
   },
   "video-player": {
     "unsupported": "К сожалению, ваш браузер не поддерживает встроенные видео или форматы загруженных видеофайлов!"
