fix: home api\ market api; time date now dynamic

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -431,6 +431,7 @@
       "Activity-title": "No activities found",
       "Activity-description": "Go explore fangible to find excitement!",
       "Liked-title": "No items found",
+      "collection-title": "No collection found",
       "Liked-description": "You haven’t liked any NFT yet. Go browse our marketplace.",
       "other-onSale-title": "No items found",
       "other-onSale-description": "This creator hasn't listed any item for sale yet.",
