fix: uset price

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -258,7 +258,7 @@
       "users": "Users"
     },
     "select-chain": {
-      "bnb": "Binance Smart Chain",
+      "bnb": "Binance Chain",
       "eth": "Ethereum Mainnet",
       "heco": "HECO Chain",
       "heco-2": "Huobi Wallet",
