Feature/fan royalty (#253)
* Add contract config

* add dialog

* complete royalty page

* complete web page

* add api and contract

* Commissioning Contract

* modify max rate

* complete royalty list

* complete royalty

--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -291,6 +291,9 @@
         "creator": "Товар не продался. Вы можете отозвать ваш NFT.",
         "others": "Товар не продался."
       }
+    },
+    "royalty": {
+      "rate-desc": "Создателю будет выплачиваться роялти в размере {rate}."
     }
   },
   "language": {
@@ -481,6 +484,13 @@
       "directPurchase": "После установки цены прямой покупки покупатели могут пропустить процесс торгов и напрямую купить по этой цене. Цена прямой покупки должна быть больше, чем минимальная ставка и минимальная цена покупки.",
       "duration": "Аукцион завершится в это время",
       "reservePrice": "Резервная цена будет скрыта. Если вы не получите ставок, равных или превышающих ваш резерв, ваш аукцион не будет продан."
+    },
+    "royalty": {
+      "platform-fee": "Комиссия Fangible",
+      "royalty-fee": "Плата за роялти",
+      "royalty-fee-tip": "Роялти перечисляются создателю НМТ сразу после продажи.",
+      "receive-fs": "За каждое издание вы получите",
+      "receive-ea": "Ваш заработок будет основан на цене сделки. "
     }
   },
   "social": {
@@ -544,5 +554,22 @@
   },
   "video-player": {
     "unsupported": "К сожалению, ваш браузер не поддерживает встроенные видео или форматы загруженных видеофайлов!"
+  },
+  "royalty": {
+    "royalty": "Роялти",
+    "royalties": "Роялти",
+    "change": "Изменить",
+    "royalty-rate": "Ставка роялти",
+    "royalty-rate-tip": "Выберите размер роялти в диапазоне от 0,1% до 6,5% для вашей коллекции. Применение роялти смарт-контрактом занимает около 30 минут.",
+    "royalty-desc": "Как только ставка роялти будет установлена, выплаты будут производиться здесь. Адрес кошелька, связанный с вашим счетом, будет получать роялти в режиме реального времени.",
+    "royalty-change-tip": "Изменена ставка роялти.",
+    "table": {
+      "item": "Пункт",
+      "price": "Цена",
+      "quantity": "Количество",
+      "fee": "Заработанное вознаграждение",
+      "payout": "Выплаты",
+      "empty": "Вы еще не получали роялти."
+    }
   }
 }
