--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -560,6 +560,7 @@
     "royalties": "Роялти",
     "change": "Изменить",
     "royalty-rate": "Ставка роялти",
+    "royalty-rate-error": "Пожалуйста, выберите размер роялти в диапазоне от 0,1% до 6,5% для вашей коллекции.",
     "royalty-rate-tip": "Выберите размер роялти в диапазоне от 0,1% до 6,5% для вашей коллекции. Применение роялти смарт-контрактом занимает около 30 минут.",
     "royalty-desc": "Как только ставка роялти будет установлена, выплаты будут производиться здесь. Адрес кошелька, связанный с вашим счетом, будет получать роялти в режиме реального времени.",
     "royalty-change-tip": "Изменена ставка роялти.",
