--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -320,7 +320,7 @@
     "all": "All",
     "art": "Art",
     "sports": "Sports",
-    "Comics": "Comics",
+    "comics": "Comics",
     "collectible": "Collectible",
     "music": "Music",
     "performer": "Performer",
