--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -314,7 +314,7 @@
     "all": "Всё",
     "art": "Исскуство",
     "sports": "Спорт",
-    "Comics": "Комикс",
+    "comics": "Комикс",
     "collectible": "Коллекционирование",
     "music": "Музыка",
     "performer": "Исполнитель",
