--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -319,7 +319,7 @@
     "all": "所有",
     "art": "艺术",
     "sports": "体育",
-    "Comics": "漫画",
+    "comics": "漫画",
     "collectible": "收藏品",
     "music": "音乐",
     "performer": "表演者",
