Development of inner pages

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -571,6 +571,7 @@
   },
   "royalty": {
     "royalty": "Royalty",
+    "set-rayalty": "Set royalty",
     "royalties": "Royalties",
     "change": "Change",
     "royalty-rate": "Royalty rate",
