--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -330,6 +330,11 @@
     "pool-balance-tip": "{balance} доступны для покупки",
     "sold-for-quantity": "Продано {sold} из {quantity}"
   },
+  "avatarsType": {
+    "collection": "коллекция",
+    "creator": "создатель",
+    "owner": "владелец"
+  },
   "cancel-timer": {
     "title": "Отмена продажи",
     "inner": "Вы уверены, что хотите отменить эту продажу?"
@@ -506,6 +511,7 @@
     "minutes-short": "{minutes} минут",
     "seconds-short": "{seconds} секуд",
     "time-left-short": "Осталось {days} {hours} {minutes} {seconds}",
+    "time-left-short-hour": "Осталось {hours}:{minutes}:{seconds}",
     "time-end": "Закончился на {days}/{months}/{years}",
     "time-expired": "Время истекло",
     "time-over": "Время истекло",
