--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -173,7 +173,7 @@
     "info": {
       "date": "{value, date, medium}",
       "time": "at {value, time, short}",
-      "view-scan": "View on BscScan"
+      "view-scan": "View on {name}"
     },
     "owner": {
       "balance": "{balance} copies"
