--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -26,7 +26,7 @@
   },
   "collection": {
     "card": {
-      "addNewItem": "Add new item",
+      "addNewItem": "Add new NFT",
       "createNewcollection": "Create new collection",
       "createNewItem": "Create new item",
       "itemsCount": "{value, plural, =0 {0 NFT} =1 {1 NFT} other {# NFTs}}"
