add other user collection

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -16,7 +16,8 @@
     "submit": "Proceed to pay",
     "buy": "Buy",
     "buy-now": "Buy now",
-    "total": "Total"
+    "total": "Total",
+    "current": "Current Pool"
   },
   "change-wallet": {
     "description": "Change network to Ethereum Mainnet, Binance Smart Chain, or Heco",
