--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -403,6 +403,7 @@
     "edit-avatar": "Редактировать аватарку",
     "edit-cover": "Изменить обложку профиля",
     "edit-profile": "Редактировать профиль",
+    "edit-collection-cover": "Редактировать обложку коллекции",
     "follow": {
       "follow": "Следить",
       "following": "Следующие",
@@ -445,7 +446,8 @@
       "my-bids": "Моя сделка",
       "my-collections": "Мои коллекции",
       "showcase": "Витрина",
-      "my-sells": "Мои продажи"
+      "my-sells": "Мои продажи",
+      "all-item":"Все предметы"
     },
     "unfollow": "Отписаться",
     "user-profile": "Профиль пользователя"
