--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -422,6 +422,7 @@
     "edit-avatar": "Edit avatar",
     "edit-cover": "Edit profile cover",
     "edit-profile": "Edit profile",
+    "edit-collection-cover": "Edit Collection Cover",
     "follow": {
       "follow": "Follow",
       "following": "Following",
@@ -465,7 +466,8 @@
       "my-bids": "My Bids",
       "my-collections": "Collections",
       "showcase": "Showcase",
-      "my-sells": "On Sale"
+      "my-sells": "On Sale",
+      "all-item":"All Item"
     },
     "unfollow": "Unfollow",
     "user-profile": "User profile"
