--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -429,6 +429,8 @@
       "MyBids-description": "您还未对任何NFT进行过出价。浏览fangible市场吧！",
       "Activity-title": "暂无动态数据",
       "Activity-description": "探索fangible，发现新惊喜！",
+      "collection-title": "暂未数据",
+      "collection-description": "您尚未创建任何作品集",
       "Liked-title": "暂无NFT",
       "Liked-description": "您还未对任何NFT进行过点赞。浏览fangible市场吧！",
       "other-onSale-title": "暂无数据",
