--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -338,6 +338,7 @@
     "transfer": "发送token",
     "pool-start-tips": "售卖开始倒计时：",
     "burn": "销毁token",
+    "item-total-supply-tip": "总份数",
     "item-balance-tip": "当前拥有份数: {balance}",
     "pool-balance-tip": "当前可售份数: {balance}",
     "sold-for-quantity": "已售出 {sold} / {quantity}"
