--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -475,7 +475,7 @@
       "my-collections": "Collections",
       "showcase": "Showcase",
       "my-sells": "On Sale",
-      "all-item": "All Item"
+      "all-item": "All Items"
     },
     "unfollow": "Unfollow",
     "user-profile": "User profile"
